--- a/exp1/public/index.html
+++ b/exp1/public/index.html
@@ -37,5 +37,18 @@
 
     loadFruits();
   </script>
+
+  <footer class="footer">
+    <div>
+      <strong>Customer Support:</strong>
+      <a href="mailto:sathishsathis75363@gmail.com">sathishsathis75363@gmail.com</a>
+    </div>
+    <div>
+      &copy; 2025 Fruit Shop &ndash; Freshness Delivered Daily
+    </div>
+    <div>
+      <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
+    </div>
+  </footer>
 </body>
 </html>
